app/src/components/css/AddSongForm.css
.add-song-form #message_tb {
    width: 100%;
}

.add-song-form {
    width: 100%;
    margin-bottom: 10px;
}

.add-song-form .main-button {
    display: flex;
    margin: 10px 0px auto auto;
}

.add-song-form .valid-check {
    display: flex;
    font-size: 12px;
    margin: 10px 0px 0 auto;
}

.add-song-form .invalid-URL-text {
    color: red;
}

.add-song-form .valid-URL-text {
    color: green;
}

.flex-column-center {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 10px 2px 10px 50px;
}

h3 {
    color: black;
    font-family: "Roboto", sans-serif;
}

p {
    font-family: "Roboto", sans-serif;
}

.search-bar {
    display: flex;
    flex-direction: row;
    align-items: baseline;
    justify-content: flex-start;
}

.search-input {
    width: 100%;
}

.song-info {
    display: inline-block;
    vertical-align: baseline;
}

.submit-button {
    margin-left: 5px;
}

